<resources>
    <!-- Bottom nav bar -->
    <string name="app_name">DoliProsp</string>
    <string name="attente">Export</string>
    <string name="prospects">Prospects</string>
    <string name="salons">Salons</string>
    <string name="compte">Compte</string>
    <string name="projets">Projets</string>

    <!-- Barre de recherche -->
    <string name="hint_search">Entrez votre recherche</string>

    <!-- Ajout -->
    <string name="labelNomPrenom">Nom et Prénom</string>
    <string name="labelMail">Email</string>
    <string name="labelTel">Téléphone</string>
    <string name="labelAdresse">Adresse</string>
    <string name="labelVille">Ville</string>
    <string name="labelCP">Code Postal</string>
    <string name="plus">+</string>
    <string name="annuler">Annuler</string>
    <string name="creer">Ajouter</string>
    <string name="hint_show">Entrez le nom du salon</string>
    <string name="hint_nomPrenomProspect">Entrez le nom et prénom du prospect</string>
    <string name="hint_mailProspect">"Entrez l'email du prospect"</string>
    <string name="hint_phoneProspect">"Entrez le numéro de téléphone du prospect"</string>
    <string name="hint_adresseProspect">"Entrez l'adresse du prospect"</string>
    <string name="hint_villeProspect">Entrez la ville du prospect</string>
    <string name="hint_cpProspect">Entrez le code postal du prospect</string>
    <string name="hint_search_1">Nom ou prénom</string>
    <string name="hint_search_2">Email ou téléphone</string>

    <!-- Page Salon -->
    <string name="mes_salons">Mes salons</string>
    <string name="salons_suggeres">Salons récents</string>
    <string name="erreur_pas_de_salons">"Aucun salon ne correspond à votre recherche"</string>
    <string name="erreur_nom_salon_longueur">"Le nom d'un salon doit être compris entre 3 et 50 caractères"</string>
    <string name="erreur_nom_salon_vide">"Le nom d'un salon ne peut pas être vide"</string>
    <string name="erreur_nom_salon_existe">Un salon avec le même nom existe déjà</string>

    <!-- Page Salon attente -->
    <string name="salon_attente">Salon en attente d\'exportation</string>
    <string name="erreur_aucun_salon">"Vous n'avez aucun salon à envoyer"</string>
    <string name="btn_envoyer_salon_attente">Envoyer</string>

    <!-- Page Prospect -->
    <string name="erreur_nom_prospect_longueur">"Le nom d'un prospect doit être compris entre 3 et 50 caractères"</string>
    <string name="erreur_prenom_prospect_longueur">"Le prénom d'un prospect doit être compris entre 3 et 50 caractères"</string>
    <string name="erreur_mail_prospect">"Le champ email n'a pas été rempli avec un email valide"</string>
    <string name="erreur_tel_prospect">"Le numéro de téléphone d'un prospect doit être composé de 10 chiffres"</string>
    <string name="erreur_tel_prospect_zero">"Le numéro de téléphone d'un prospect doit débuter par un 0"</string>
    <string name="erreur_adresse_prospect_maxLongueur">"L'adresse d'un prospect ne peut pas dépasser 80 caractères"</string>
    <string name="erreur_adresse_prospect_vide">"L'adresse d'un prospect ne peut pas être vide"</string>
    <string name="erreur_codePostal_prospect">"Le code postal d'un prospect doit être un nombre entre 01000 et 99999"</string>
    <string name="erreur_estClient_prospect">"Le statut de client d'un prospect doit être spécifié (oui ou non)"</string>
    <string name="erreur_codePostal_prospect_invalid">Le code postal est invalide !</string>
    <string name="erreur_codePostal_prospect_vide">Le code postal ne peut pas être vide !</string>
    <string name="erreur_ville_prospect_vide">La ville ne peut pas être vide !</string>
    <string name="erreur_prospect_existant">Un prospect similaire existe déjà !</string>
    <string name="erreur_champ_vide">Les champs ne peuvent pas être vides !</string>
    <string name="idEstProspect">2</string>
    <string name="idDolibarrBase">false</string>
    <string name="prospectExisteDeja">Un prospect avec ce numéro de téléphone existe déjà"</string>

    <!-- Page Projet -->
    <string name="mes_projets">Mes projets</string>
    <string name="projets_suggeres">Projets suggérés</string>
    <string name="hint_titreProjet">Entrez le titre du projet</string>
    <string name="erreur_titre_projet_vide">Le titre du projet est obligatoire.</string>
    <string name="erreur_titre_projet_caracteres">Le titre ne peut contenir que des lettres, chiffres, espaces et tirets.</string>
    <string name="erreur_description_projet_longueur">La description ne peut pas dépasser 1500 caractères.</string>
    <string name="erreur_date_debut_vide">La date de début est obligatoire.</string>
    <string name="erreur_date_debut_format">Le format de la date de début doit être JJ/MM/AAAA.</string>
    <string name="erreur_date_fin_format">Le format de la date de fin doit être JJ/MM/AAAA.</string>
    <string name="erreur_date_debut_passee">La date de début ne peut pas être dans le passé.</string>
    <string name="erreur_date_invalide">La date saisie est invalide.</string>
    <string name="salon_actuel">Salon actuel :</string>
    <string name="prospect_actuel">Prospect actuel :</string>

    <!-- Page connexion -->
    <string name="btn_connexion">Se connecter</string>
    <string name="login">Login</string>
    <string name="url">URL</string>
    <string name="username">"Nom d'utilisateur"</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="url_invalide">Renseignez une URL valide débutant par http://</string>
    <string name="url_invalide_2">"Renseignez l'URL sans / à la fin"</string>
    <string name="non_connecte">"Vous n'êtes pas connecté à internet, vous ne pouvez pas vous accéder à l'application."</string>
    <string name="informations_invalide">Veuillez renseigner une URL, un identifiant et un mot de passe valide avant de vous connecter</string>
    <string name="informations_saisies_incorrecte">"L'identifiant, le mot de passe ou l'URL sont invalides, veuillez réessayer"</string>
    <string name="url_example">http://dolibarr.xxxx.fr/xxxx/htdocs</string>
    <string name="mot_depasse_incorrect">Mot de passe invalide</string>

    <!-- Page user -->
    <string name="monCompte">Mon compte</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="adresse">Adresse :</string>
    <string name="codePostal">Code postal :</string>
    <string name="ville">Ville :</string>
    <string name="numéroTéléphone">Numéro de téléphone :</string>
    <string name="adresseMail">Adresse mail :</string>
    <string name="labelTitreProjet">Titre</string>
    <string name="labelDescriptionProjet">Description</string>
    <string name="labelDateDebutProjet">Date de début</string>
    <string name="labelDateFinProjet">Date de fin</string>
    <string name="hintDate">jj/mm/aaaa</string>
    <string name="hint_descriptionProspect">Description du projet</string>

    <string name="confirmation_suppresion_salon">Êtes-vous sûr de vouloir supprimer ce salon ? Si ce salon possède des prospects et des projets, ils seront aussi supprimés</string>
    <string name="confirmation_suppresion_prospect">Êtes-vous sûr de vouloir supprimer ce prospect ? Si ce prospect possède des projets, ils seront aussi supprimés. Si ce prospect provient de Dolibarr, il ne sera pas supprimé de Dolibarr.</string>
    <string name="confirmation_suppresion_projet">Êtes-vous sûr de vouloir supprimer ce projet ?</string>

    <!-- Toast selection-->
    <string name="selection_salon">Veuillez sélectionner un salon avant de vous rendre sur cette page</string>
    <string name="selection_prospect">Veuillez sélectionner un prospect avant de vous rendre sur cette page</string>
    <string name="erreur_titre_projet_longueur">Le titre doit faire plus de 2 caractères et moins de 50</string>
    <string name="erreur_date_fin_projet_longueur">La date ne doit pas être dans le passé</string>
    <string name="btn_tout_selectionner">Tout sélectionner</string>

    <!-- Envoie salon en attente -->
    <string name="erreur_checkbox">"La case doit être cochée avant d'envoyer"</string>
    <string name="texte_checkbox">Je suis sûr(e) de vouloir envoyer</string>
    <string name="confirmation_envoie">Êtes-vous sûr de vouloir envoyer les informations ?</string>
    <string name="erreur_connexion">"L'envoi n'a pas pu être effectué, vous n'êtes pas connecté à Internet."</string>

    <string name="labelNomSalon">Nom</string>
    <string name="recherche_prospect_nul">Aucun prospect ne correspond aux critères saisis</string>

    <string name="moins">-</string>
    <string name="label_sort">Trier par :</string>
    <string name="aucun_prospect_trouvee">Aucun prospect ne correspond aux critères renseignés</string>

    <!-- Texte à afficher -->
    <string name="nb_prospect">2</string>
    <string name="nb_projet">0</string>

    <string name="deconnexion">Déconnexion</string>
    <string name="dialog_warn_deconnexion_msg">Attention : Si vous vous déconnectez maintenant, toutes les données locales non encore exportées vers Dolibarr seront perdues.</string>
    <string name="dialog_info_deconnexion_msg">Êtes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="dialog_button_deconnexion">Se déconnecter</string>
</resources>