<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/labelTitreProjet"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="50"
        android:hint="@string/hint_titreProjet"
        android:singleLine="true" />

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/labelDescriptionProjet" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:maxLength="500"
        android:hint="@string/hint_descriptionProspect"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/labelDateDebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/labelDateDebutProjet"
            android:singleLine="true" />

        <TextView
            android:id="@+id/labelDateFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/labelDateFinProjet"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editTextDateDebut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintDate"
            android:inputType="none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editTextDateFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintDate"
            android:inputType="none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true" />
    </LinearLayout>

    <TableRow>

        <Button
            android:id="@+id/buttonSubmit"
            style="@style/button_validate"
            android:layout_span="1" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_span="1"
            style="@style/button_cancel" />
    </TableRow>

    <TextView
        android:id="@+id/erreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/erreur_texte"
        android:visibility="gone" />

</TableLayout>
