<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:text="@string/salon_attente" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/erreur_pas_de_salons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/erreur_aucun_salon"
                    android:textSize="@dimen/erreur_texte"
                    android:layout_marginLeft="@dimen/subtitle_marginLeft"
                    android:layout_marginRight="@dimen/subtitle_marginRight"
                    android:layout_marginTop="@dimen/subtitle_marginTop"
                    android:textColor="@color/red"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/chargement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:layout_gravity="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/salonAttenteRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_top_recycler_view"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:text="@string/btn_envoyer_salon_attente" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>